--- a/square-root/package.json
+++ b/square-root/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@digieggs/rn-country-code-picker": "^1.2.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -15,8 +16,10 @@
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "rn-country-picker": "0.0.12",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
