--- a/square-root/package.json
+++ b/square-root/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aws-amplify": "^3.3.23",
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
