--- a/amplify/backend/auth/squarerootprojectc2c171e9/squarerootprojectc2c171e9-cloudformation-template.yml
+++ b/amplify/backend/auth/squarerootprojectc2c171e9/squarerootprojectc2c171e9-cloudformation-template.yml
@@ -117,6 +117,10 @@ Parameters:
   usernameAttributes:
     Type: CommaDelimitedList
       
+  triggers:
+    Type: String
+  
+            
         
   userPoolGroupList:
     Type: CommaDelimitedList
@@ -129,6 +133,14 @@ Parameters:
   usernameCaseSensitive:
     Type: String
             
+      
+  parentStack:
+    Type: String
+        
+        
+  permissions:
+    Type: CommaDelimitedList
+      
         
   dependsOn:
     Type: CommaDelimitedList
@@ -145,23 +157,11 @@ Parameters:
   adminQueries:
     Type: String
             
-  triggers:
-    Type: String
-  
-            
   
   hostedUI:
     Type: String
             
             
-      
-  parentStack:
-    Type: String
-        
-        
-  permissions:
-    Type: CommaDelimitedList
-      
         
   authProviders:
     Type: CommaDelimitedList
@@ -180,7 +180,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'squareb6eb2ed2_sns-role', !Join ['',[ 'sns', 'b6eb2ed2', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'squarec2c171e9_sns-role', !Join ['',[ 'sns', 'c2c171e9', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -192,10 +192,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: squareb6eb2ed2_role_external_id
+                sts:ExternalId: squarec2c171e9_role_external_id
       Policies:
         -
-          PolicyName: squareb6eb2ed2-sns-policy
+          PolicyName: squarec2c171e9-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -224,6 +224,11 @@ Resources:
           Required: true
           Mutable: true
         
+        -
+          Name: phone_number
+          Required: true
+          Mutable: true
+        
       
       
       
@@ -247,7 +252,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: squareb6eb2ed2_role_external_id
+        ExternalId: squarec2c171e9_role_external_id
     
   
   
@@ -267,7 +272,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: squareb6eb2ed2_app_clientWeb
+      ClientName: squarec2c171e9_app_clientWeb
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -280,7 +285,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: squareb6eb2ed2_app_client
+      ClientName: squarec2c171e9_app_client
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -294,7 +299,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'b6eb2ed2', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'c2c171e9', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -348,7 +353,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: squareb6eb2ed2_userpoolclient_lambda_iam_policy
+      PolicyName: squarec2c171e9_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -365,7 +370,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: squareb6eb2ed2_userpoolclient_lambda_log_policy
+      PolicyName: squarec2c171e9_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -405,7 +410,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'squarerootprojectb6eb2ed2_identitypool_b6eb2ed2', !Join ['',['squarerootprojectb6eb2ed2_identitypool_b6eb2ed2', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'squarerootprojectc2c171e9_identitypool_c2c171e9', !Join ['',['squarerootprojectc2c171e9_identitypool_c2c171e9', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
