--- a/square-root/package.json
+++ b/square-root/package.json
@@ -17,11 +17,11 @@
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
+    "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "rn-country-picker": "0.0.12",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
