--- a/amplify/backend/auth/squarerootprojectfe3d4090/squarerootprojectfe3d4090-cloudformation-template.yml
+++ b/amplify/backend/auth/squarerootprojectfe3d4090/squarerootprojectfe3d4090-cloudformation-template.yml
@@ -125,6 +125,7 @@ Parameters:
   userPoolGroupList:
     Type: CommaDelimitedList
       
+            
   serviceName:
     Type: String
   
@@ -145,27 +146,6 @@ Parameters:
   dependsOn:
     Type: CommaDelimitedList
       
-  
-  thirdPartyAuth:
-    Type: String
-            
-  
-  userPoolGroups:
-    Type: String
-            
-  
-  adminQueries:
-    Type: String
-            
-  
-  hostedUI:
-    Type: String
-            
-            
-        
-  authProviders:
-    Type: CommaDelimitedList
-      
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
   
@@ -180,7 +160,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'squarec2c171e9_sns-role', !Join ['',[ 'sns', 'c2c171e9', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'squarefe3d4090_sns-role', !Join ['',[ 'sns', 'fe3d4090', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -192,10 +172,10 @@ Resources:
               - "sts:AssumeRole"
             Condition:
               StringEquals:
-                sts:ExternalId: squarec2c171e9_role_external_id
+                sts:ExternalId: squarefe3d4090_role_external_id
       Policies:
         -
-          PolicyName: squarec2c171e9-sns-policy
+          PolicyName: squarefe3d4090-sns-policy
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
@@ -225,6 +205,11 @@ Resources:
           Mutable: true
         
         -
+          Name: name
+          Required: true
+          Mutable: true
+        
+        -
           Name: phone_number
           Required: true
           Mutable: true
@@ -241,10 +226,10 @@ Resources:
       Policies:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
-          RequireLowercase: true
-          RequireNumbers: true
+          RequireLowercase: false
+          RequireNumbers: false
           RequireSymbols: false
-          RequireUppercase: true
+          RequireUppercase: false
       
       UsernameAttributes: !Ref usernameAttributes
       
@@ -252,7 +237,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration:
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: squarec2c171e9_role_external_id
+        ExternalId: squarefe3d4090_role_external_id
     
   
   
@@ -272,10 +257,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: squarec2c171e9_app_clientWeb
-      
-      ReadAttributes: !Ref userpoolClientReadAttributes
-      WriteAttributes: !Ref userpoolClientWriteAttributes
+      ClientName: squarefe3d4090_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -285,10 +267,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: squarec2c171e9_app_client
-      
-      ReadAttributes: !Ref userpoolClientReadAttributes
-      WriteAttributes: !Ref userpoolClientWriteAttributes
+      ClientName: squarefe3d4090_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -299,7 +278,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'c2c171e9', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'fe3d4090', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -353,7 +332,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: squarec2c171e9_userpoolclient_lambda_iam_policy
+      PolicyName: squarefe3d4090_userpoolclient_lambda_iam_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -370,7 +349,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: squarec2c171e9_userpoolclient_lambda_log_policy
+      PolicyName: squarefe3d4090_userpoolclient_lambda_log_policy
       Roles:
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -410,7 +389,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties:
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'squarerootprojectc2c171e9_identitypool_c2c171e9', !Join ['',['squarerootprojectc2c171e9_identitypool_c2c171e9', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'squarerootprojectfe3d4090_identitypool_fe3d4090', !Join ['',['squarerootprojectfe3d4090_identitypool_fe3d4090', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
