--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,5 +6,13 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "function": {
+    "addUserToGroup": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": []
+    }
   }
 }
