--- a/square-root/package.json
+++ b/square-root/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
+    "@aws-amplify/ui-react": "^1.0.5",
     "@digieggs/rn-country-code-picker": "^1.2.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -12,7 +13,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "aws-amplify": "^3.3.23",
+    "aws-amplify": "^3.3.24",
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
