--- a/square-root/package.json
+++ b/square-root/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.24",
+    "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
