contact form works #TODO: change the email

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -28,6 +28,20 @@
           ]
         }
       ]
+    },
+    "sendEmail": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "contactFormTable",
+          "attributes": [
+            "StreamArn"
+          ]
+        }
+      ]
     }
   },
   "storage": {
