--- a/square-root/package.json
+++ b/square-root/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^3.3.24",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
+    "dotenv": "^8.2.0",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
