--- a/square-root/package.json
+++ b/square-root/package.json
@@ -20,6 +20,7 @@
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
+    "react-accessible-dropdown-menu-hook": "^2.2.0",
     "react-bootstrap": "^1.5.2",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
@@ -27,6 +28,7 @@
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.1",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
