--- a/square-root/package.json
+++ b/square-root/package.json
@@ -24,6 +24,7 @@
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
