--- a/square-root/package.json
+++ b/square-root/package.json
@@ -17,8 +17,10 @@
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
