--- a/square-root/package.json
+++ b/square-root/package.json
@@ -19,10 +19,12 @@
     "react": "^17.0.1",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
