--- a/square-root/package.json
+++ b/square-root/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
     "semantic-ui-react": "^2.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
