--- a/square-root/package.json
+++ b/square-root/package.json
@@ -13,11 +13,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.23",
+    "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
+    "react-bootstrap": "^1.6.0",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
@@ -25,8 +26,10 @@
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.0.0-rc.3",
     "sass": "^1.32.8",
     "semantic-ui-react": "^2.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
     "webfontloader": "^1.6.28"
   },
