--- a/square-root/package.json
+++ b/square-root/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.6.0",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-dropdown-select": "^4.7.4",
     "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
