--- a/square-root/package.json
+++ b/square-root/package.json
@@ -18,6 +18,7 @@
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.6.0",
     "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
@@ -27,6 +28,8 @@
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-select-search": "^3.0.8",
     "react-spring": "^9.0.0-rc.3",
     "sass": "^1.32.8",
     "semantic-ui-react": "^2.0.3",
