--- a/square-root/package.json
+++ b/square-root/package.json
@@ -19,6 +19,7 @@
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
     "font-awesome-icons": "^1.6.0",
+    "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.6.0",
