Fixed errors with schema

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -85,7 +85,7 @@
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
                 "apiKeyExpirationDays": 365,
-                "description": "api for unathenticated users"
+                "description": "api for unathorised users"
               }
             }
           ]
