--- a/square-root/package.json
+++ b/square-root/package.json
@@ -30,6 +30,7 @@
     "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.3",
     "react-select": "^4.3.1",
     "react-select-search": "^3.0.8",
     "react-spring": "^9.0.0-rc.3",
