--- a/square-root/package.json
+++ b/square-root/package.json
@@ -18,9 +18,12 @@
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
     "fa-icons": "^0.2.0",
+    "flag-icon-css": "^3.5.0",
     "font-awesome-icons": "^1.6.0",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
+    "js-cookie": "^3.0.0",
     "material-ui-phone-number": "^2.2.6",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
