--- a/square-root/package.json
+++ b/square-root/package.json
@@ -4,19 +4,11 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
-    "@digieggs/rn-country-code-picker": "^1.2.0",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.12.1",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.23",
     "bootstrap": "^4.6.0",
-    "bulma": "^0.9.2",
+    "dotenv": "^10.0.0",
     "fa-icons": "^0.2.0",
     "flag-icon-css": "^3.5.0",
     "font-awesome-icons": "^1.6.0",
@@ -28,7 +20,6 @@
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.6.0",
-    "react-country-region-selector": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-dropdown-select": "^4.7.4",
     "react-i18next": "^11.11.4",
@@ -41,7 +32,6 @@
     "react-select-search": "^3.0.8",
     "react-spring": "^9.0.0-rc.3",
     "sass": "^1.32.8",
-    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
     "webfontloader": "^1.6.28"
