--- a/square-root/package.json
+++ b/square-root/package.json
@@ -31,6 +31,7 @@
     "react-select": "^4.3.1",
     "react-select-search": "^3.0.8",
     "react-spring": "^9.0.0-rc.3",
+    "react-step-wizard": "^5.3.9",
     "sass": "^1.32.8",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
