--- a/square-root/package.json
+++ b/square-root/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/cli": "^4.45.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.0",
     "aws-amplify": "^3.3.23",
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
