--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -94,10 +94,5 @@
       ]
     }
   },
-  "hosting": {
-    "S3AndCloudFront": {
-      "service": "S3AndCloudFront",
-      "providerPlugin": "awscloudformation"
-    }
-  }
+  "hosting": {}
 }
