--- a/square-root/package.json
+++ b/square-root/package.json
@@ -26,6 +26,7 @@
     "react-dropdown-select": "^4.7.4",
     "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
+    "react-material-ui-carousel": "^2.3.5",
     "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
     "react-router-dom": "^5.2.0",
