--- a/square-root/package.json
+++ b/square-root/package.json
@@ -14,6 +14,7 @@
     "fa-icons": "^0.2.0",
     "flag-icon-css": "^3.5.0",
     "font-awesome-icons": "^1.6.0",
+    "history": "^5.0.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
@@ -29,7 +30,8 @@
     "react-material-ui-carousel": "^2.3.5",
     "react-modal": "^3.13.1",
     "react-native-svg": "^12.1.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.0.0-beta.6",
+    "react-router-dom": "^6.0.0-beta.6",
     "react-scroll": "^1.8.3",
     "react-select": "^4.3.1",
     "react-select-search": "^3.0.8",
