--- a/square-root/package.json
+++ b/square-root/package.json
@@ -1,30 +1,46 @@
 {
   "name": "square-root",
-  "version": "0.1.0",
+  "version": "1.2.0",
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.0",
     "aws-amplify": "^3.3.23",
-    "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
     "fa-icons": "^0.2.0",
     "flag-icon-css": "^3.5.0",
     "font-awesome-icons": "^1.6.0",
-    "history": "^5.0.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
+    "styled-components": "^5.3.0",
+    "history": "^5.0.1",
     "js-cookie": "^3.0.0",
     "json-merge": "^1.2.0",
-    "material-ui-phone-number": "^2.2.6",
-    "react": "^17.0.1",
+    "apexcharts": "^3.23.1",
+    "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.18.1",
+    "date-fns": "^2.21.3",
+    "feather-icons-react": "^0.4.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "webfontloader": "^1.6.28",
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
+    "@mui/lab": "5.0.0-alpha.50",
+    "@mui/utils": "5.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "5.0.3",
+    "@mui/material": "5.0.3",
+    "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.6.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-dropdown-select": "^4.7.4",
     "react-i18next": "^11.11.4",
     "react-icons": "^4.2.0",
@@ -36,28 +52,8 @@
     "react-scroll": "^1.8.3",
     "react-select": "^4.3.1",
     "react-select-search": "^3.0.8",
-    "react-spring": "^9.0.0-rc.3",
+    "react-spring": "^9.2.4",
     "react-step-wizard": "^5.3.9",
-    "sass": "^1.32.8",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1",
-    "webfontloader": "^1.6.28",
-    "@emotion/cache": "^11.4.0",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.3.0",
-    "@mui/lab": "5.0.0-alpha.50",
-    "@mui/utils": "5.0.1",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "apexcharts": "^3.23.1",
-    "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.18.1",
-    "date-fns": "^2.21.3",
-    "feather-icons-react": "^0.4.3",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
     "react-apexcharts": "^1.3.7",
     "react-big-calendar": "^0.33.5",
     "react-helmet": "^6.1.0",
@@ -70,7 +66,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "stylis-plugin-rtl": "^2.1.0"
+    "stylis-plugin-rtl": "^2.1.0",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
