--- a/square-root/package.json
+++ b/square-root/package.json
@@ -1,6 +1,8 @@
 {
   "name": "square-root",
   "version": "1.2.0",
+  "homepage": "/",
+  "author": "SquareRoot",
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
