--- a/square-root/package.json
+++ b/square-root/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "5.0.3",
@@ -33,6 +34,7 @@
     "json-merge": "^1.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node-modules": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
