--- a/square-root/package.json
+++ b/square-root/package.json
@@ -61,6 +61,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "uuid": "^7.0.3",
@@ -98,8 +99,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "babel-plugin-styled-components": "^1.13.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^1.13.1",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
