--- a/square-root/package.json
+++ b/square-root/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.23.1",
     "aws-amplify": "^3.3.23",
+    "aws-sdk": "^2.1039.0",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.1",
     "date-fns": "^2.21.3",
@@ -98,8 +99,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "babel-plugin-styled-components": "^1.13.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^1.13.1",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
