--- a/square-root/package.json
+++ b/square-root/package.json
@@ -21,16 +21,19 @@
     "aws-sdk": "^2.1039.0",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.1",
+    "cryptiles": "^4.1.2",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
     "fa-icons": "^0.2.0",
     "feather-icons-react": "^0.4.3",
     "flag-icon-css": "^3.5.0",
     "font-awesome-icons": "^1.6.0",
+    "handlebars": "^4.7.7",
     "history": "^5.0.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
+    "immer": "^9.0.7",
     "js-cookie": "^3.0.0",
     "json-merge": "^1.2.0",
     "lodash": "^4.17.21",
