--- a/square-root/package.json
+++ b/square-root/package.json
@@ -19,23 +19,18 @@
     "apexcharts": "^3.23.1",
     "aws-amplify": "^3.3.23",
     "aws-sdk": "^2.1039.0",
-    "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.18.1",
     "cryptiles": "^4.1.2",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
-    "fa-icons": "^0.2.0",
-    "feather-icons-react": "^0.4.3",
     "flag-icon-css": "^3.5.0",
-    "font-awesome-icons": "^1.6.0",
     "handlebars": "^4.7.7",
-    "history": "^5.0.1",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
     "immer": "^9.0.7",
     "js-cookie": "^3.0.0",
     "json-merge": "^1.2.0",
+    "jsonschema": "^0.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-modules": "^1.0.1",
@@ -64,10 +59,10 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.0",
+    "trim-newlines": "^3.0.1",
     "uuid": "^7.0.3",
     "web-vitals": "^1.1.1"
   },
