--- a/square-root/package.json
+++ b/square-root/package.json
@@ -22,6 +22,7 @@
     "cryptiles": "^4.1.2",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
+    "feather-icons-react": "^0.5.0",
     "flag-icon-css": "^3.5.0",
     "handlebars": "^4.7.7",
     "i18next": "^20.4.0",
