--- a/square-root/package.json
+++ b/square-root/package.json
@@ -1,9 +1,9 @@
 {
   "name": "square-root",
   "version": "1.2.0",
-  "homepage": "/",
   "author": "SquareRoot",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@aws-amplify/cli": "^4.45.0",
     "@emotion/styled": "^11.3.0",
@@ -22,6 +22,7 @@
     "cryptiles": "^4.1.2",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
+    "feather-icons-react": "^0.5.0",
     "flag-icon-css": "^3.5.0",
     "handlebars": "^4.7.7",
     "i18next": "^20.4.0",
@@ -75,7 +76,9 @@
     "pretty": "prettier --write \"./**/*.{js,jsx}\"",
     "style:all": "npm run style:lint && npm run style:prettier",
     "style:lint": "eslint '**/*.{js,jsx,ts,tsx}'",
-    "style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'"
+    "style:prettier": "prettier --check '**/*.{js,jsx,ts,tsx}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -111,6 +114,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.0",
     "prettier": "^2.3.1",
     "react-scripts": "^4.0.3"
