--- a/square-root/package.json
+++ b/square-root/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "feather-icons-react": "^0.5.0",
     "flag-icon-css": "^3.5.0",
+    "follow-redirects": "^1.14.7",
     "handlebars": "^4.7.7",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -34,7 +35,9 @@
     "jsonschema": "^0.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node-fetch": "^3.2.0",
     "node-modules": "^1.0.1",
+    "pac-resolver": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
@@ -66,6 +69,9 @@
     "trim-newlines": "^3.0.1",
     "uuid": "^7.0.3",
     "web-vitals": "^1.1.1"
+  },
+  "resolutions": {
+    "ansi-html": "https://registry.npmjs.org/ansi-html-community/-/ansi-html-community-0.0.8.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
