Update packages to patched versions

--- a/square-root/package.json
+++ b/square-root/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@xmldom/xmldom": "^0.8.0",
     "apexcharts": "^3.23.1",
     "aws-amplify": "^3.3.23",
     "aws-sdk": "^2.1039.0",
@@ -32,12 +33,16 @@
     "immer": "^9.0.7",
     "js-cookie": "^3.0.0",
     "json-merge": "^1.2.0",
+    "json-schema": "^0.4.0",
     "jsonschema": "^0.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "nanoid": "^3.2.0",
     "node-fetch": "^3.2.0",
+    "node-forge": "^1.2.1",
     "node-modules": "^1.0.1",
     "pac-resolver": "^5.0.0",
+    "postcss": "^8.4.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
