--- a/square-root/package.json
+++ b/square-root/package.json
@@ -16,34 +16,43 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "ansi-regex": "^6.0.1",
     "apexcharts": "^3.23.1",
     "aws-amplify": "^3.3.23",
     "aws-sdk": "^2.1039.0",
+    "axios": "^0.25.0",
+    "braces": "^3.0.2",
+    "browserslist": "^4.19.1",
     "cryptiles": "^4.1.2",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
     "feather-icons-react": "^0.5.0",
     "flag-icon-css": "^3.5.0",
     "follow-redirects": "^1.14.7",
+    "glob-parent": "^6.0.2",
     "handlebars": "^4.7.7",
     "i18next": "^20.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.0",
-    "immer": "^9.0.7",
+    "immer": "^9.0.12",
     "is-buffer": "^2.0.5",
     "js-cookie": "^3.0.0",
     "json-merge": "^1.2.0",
     "json-schema": "^0.4.0",
     "jsonschema": "^0.4.0",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
     "moment": "^2.29.1",
     "nanoid": "^3.2.0",
     "node-fetch": "^3.2.0",
     "node-forge": "^1.2.1",
     "node-modules": "^1.0.1",
+    "normalize-url": "^7.0.3",
+    "nth-check": "^2.0.1",
     "pac-resolver": "^5.0.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.7.2",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.7",
     "react-avatar": "^3.10.0",
@@ -70,6 +79,7 @@
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
+    "request": "^2.88.2",
     "styled-components": "^5.3.0",
     "trim-newlines": "^3.0.1",
     "uuid": "^7.0.3",
