--- a/square-root/package.json
+++ b/square-root/package.json
@@ -40,6 +40,7 @@
     "json-merge": "^1.2.0",
     "json-schema": "^0.4.0",
     "jsonschema": "^0.4.0",
+    "load-json-file": "^7.0.1",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "moment": "^2.29.1",
